--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 *, ::before, ::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
@@ -12,11 +12,31 @@ html {
 
 body {
   text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+::-webkit-scrollbar {
+    height: 1rem;
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    --tw-border-opacity: 1;
+    background-color: rgba(217,217,227,.8);
+    border-color: rgba(255,255,255);
+    border-radius: 9999px;
+    border-width: 1px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 9999px;
 }
 
 @layer components {
   .infoText {
-    @apply p-4 bg-gray-700/50 rounded-lg max-w-[300px]
+    @apply p-3 bg-gray-700/50 text-base rounded-lg max-w-[300px] hover:bg-gray-800/50 transition-colors
   }
 
   .chatRow {
